// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal footer it matches snapshot with no props 1`] = `
<ModalFooter>
  <ModalFooterstyles__Footer>
    <div
      className="ModalFooterstyles__Footer-sc-1ls2gha-0 gkRbig"
    >
      Footer
    </div>
  </ModalFooterstyles__Footer>
</ModalFooter>
`;

exports[`Modal footer it matches snapshot with props 1`] = `
<ModalFooter
  className="className"
  style={
    Object {
      "display": "inline",
    }
  }
>
  <ModalFooterstyles__Footer
    className="className"
    style={
      Object {
        "display": "inline",
      }
    }
  >
    <div
      className="ModalFooterstyles__Footer-sc-1ls2gha-0 gkRbig className"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      Footer
    </div>
  </ModalFooterstyles__Footer>
</ModalFooter>
`;
